REFAC-11: Updating the code to ensure the game is running smoothly